--- a/PierresBakery/PierresBakery.csproj
+++ b/PierresBakery/PierresBakery.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <OutputType>Exe</OutputType>
+    <!-- <OutputType>Exe</OutputType> not needed for console-only apps -->
   </PropertyGroup>
 
 </Project>
